--- a/zerostyle.css
+++ b/zerostyle.css
@@ -1,26 +1,31 @@
-* {
-  color: #222;
+html {
+  font-size: 16px;
+  scroll-behavior: smooth;
 }
+
 body {
   padding: 0;
   margin: 0 auto;
 }
 
+/* ========================== header  */
 header {
-  position: fixed;
-  width: 100%;
-  height: 50px;
-  padding: 20px;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  padding: 1rem 0;
 
   background-color: yellow;
-}
+} 
 .header__wrap {
-  display: grid;
-  grid-template-columns: 3fr 7fr;
-  width: 1120px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
   margin: 0 auto;
-  
-  line-height: 50px;
+  max-width: 70rem;
+  padding: 0 5%;
 }
 
 .header__wrap > .logo {
@@ -30,44 +35,54 @@ header {
   font-weight: 600;
 }
 
+.nav {
+  font-size: 1rem;
+  color: #333;
+}
 .nav-menu {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+.nav-menu__block {
+  position: relative;
 
-  font-size: 18px;
-  font-weight: 600;
   text-align: center;
+}
+.nav-menu__item {
+  padding: 16px;
+
+  font-weight: 700;
 }
 .nav-menu__list {
   display: none;
   
-  width: 150px;
-  margin: 0 auto;
-  padding: 16px;
-
-  list-style: none;
-  border-radius: 20px;
-  background-color: #fff;
-}
-.nav-menu__list li {border-bottom: 1px solid rgb(209, 209, 209);}
-.nav-menu__list li:nth-last-child(1) {border: none;}
-.nav-menu__list a {text-decoration: none;}
-
-
-
-
-
-
-
-
-
-
-
-
-footer {
   width: 100%;
-  height: 120px;
-  background-color: black;
+  padding: 1.6rem 2.4rem;
+  box-sizing: border-box;
+
+  list-style-type: none;
+  border-radius: 1rem;
+  background-color: rgba(255, 255, 255, 0.589);
+  box-shadow: 0 0.4rem 1rem rgba(0, 0, 0, 8%);
 }
+.nav-menu__list a {
+  padding: 10px;
+
+  line-height: 36px;
+  text-decoration: none;
+  color: #333;
+}
+
+/* ====================== slider */
+.content-slider {
+  position: relative;
+  width: 100%;
+  height: 93vh;
+
+  background-color: aqua;
+}
+
+
+
+/* ====================== media query= */
