--- a/Clone/clone.css
+++ b/Clone/clone.css
@@ -1,11 +1,15 @@
 html {
   font-size: 16px;
+  text-decoration: none;
   scroll-behavior: smooth;
 }
-
 body {
   padding: 0;
   margin: 0 auto;
+}
+a {
+  text-decoration: inherit;
+  color: #333;
 }
 
 /* ========================== header  */
@@ -58,7 +62,7 @@ header {
   display: none;
   
   width: 100%;
-  padding: 1.6rem 2.4rem;
+  padding: 1.6rem 2.8rem;
   box-sizing: border-box;
 
   list-style-type: none;
@@ -66,21 +70,50 @@ header {
   background-color: rgba(255, 255, 255, 0.589);
   box-shadow: 0 0.4rem 1rem rgba(0, 0, 0, 8%);
 }
-.nav-menu__list a {
-  padding: 10px;
-
-  line-height: 36px;
-  text-decoration: none;
-  color: #333;
-}
+.nav-menu__list a {line-height: 36px;}
 
 /* ====================== slider */
-.content-slider {
+.slide-section {
   position: relative;
   width: 100%;
   height: 93vh;
 
   background-color: aqua;
+}
+.slider-section__container {
+  /* overflow: hidden; */
+
+  position: relative;
+}
+.container__slider {
+  display: flex;
+  align-items: stretch;
+  visibility: visible;
+
+  transform: translate3d(0%, 0, 0);
+  transition: .8s ease-out;
+}
+.slider__item {
+  display: block;
+
+  min-width: 100%;
+  padding: 4em 0;
+  z-index: 0;
+  opacity: 0;
+
+  background: #444;
+  transform: translateX(0%);
+  transition-property: opacity;
+  transition-duration: 0s;
+  transition-timing-function: ease-out;
+}
+.slider__active {
+  z-index: 1;
+  opacity: 1;
+
+  transition-property: opacity;
+  transition-duration: .8s;
+  transition-timing-function: ease-out;
 }
 
 
